ask for VR parameters

--- a/FIT_16205_Ivanishkin_Filter/src/main/java/ru/nsu/fit/g16205/ivanishkin/view/FilterSettingsDialog.form
+++ b/FIT_16205_Ivanishkin_Filter/src/main/java/ru/nsu/fit/g16205/ivanishkin/view/FilterSettingsDialog.form
@@ -101,13 +101,11 @@
           </component>
         </children>
       </grid>
-      <component id="12a59" class="javax.swing.JLabel">
+      <component id="12a59" class="javax.swing.JLabel" binding="topLabel" custom-create="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="All from 2 to 256"/>
-        </properties>
+        <properties/>
       </component>
     </children>
   </grid>
